tofu/main.tf
# Configure the AWS Provider
provider "aws" {
  region                   = "us-east-1"
  shared_credentials_files = ["../_credentials/aws_learner_lab_credentials"]
  profile                  = "awslearnerlab"
}



# Groupe de sécurité
resource "aws_security_group" "allow_ssh_http" {
  name        = "allow_ssh_http_v2"
  description = "Allow SSH, HTTP and MLflow access"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_instance" "ml_training" {
  ami           = "ami-04b70fa74e45c3917"
  instance_type = "t2.micro"
  key_name      = "vockey"
  vpc_security_group_ids = [aws_security_group.allow_ssh_http.id]
  tags = {
    Name = "EC2-TRAINING"
  }
}

resource "aws_instance" "ml_api" {
  ami           = "ami-04b70fa74e45c3917"
  instance_type = "t2.micro"
  key_name      = "vockey"

  vpc_security_group_ids = [aws_security_group.allow_ssh_http.id]

  tags = {
    Name = "EC2-API"
  }
}







# Les output
output "ml_api_public_ip" {
  value = aws_instance.ml_api.public_ip
}

output "ml_training_public_ip" {
  value = aws_instance.ml_training.public_ip
}
